2017-01-23 18:38  v1c0nt

	* NEWS, configure.ac: release 0.38.2

2017-01-23 18:37  v1c0nt

	* src/main.c: fix enter behavior

2017-01-22 08:22  v1c0nt

	* src/notification.c: some cleanup

2017-01-14 05:28  v1c0nt

	* po/pt_BR.po: update brazilian translation

2017-01-13 12:05  v1c0nt

	* src/notebook.c, src/paned.c:

2017-01-13 12:04  v1c0nt

	* data/yad.1, src/notebook.c, src/paned.c: add names to notebook
	  and pane widgets

2017-01-12 02:58  v1c0nt

	* po/pt_BR.po: update brazilian translation

2017-01-08 10:25  v1c0nt

	* ChangeLog, NEWS: release 0.38.1

2017-01-08 10:23  v1c0nt

	* configure.ac, src/about.c: bump copyright years and version

2017-01-08 10:22  v1c0nt

	* src/dnd.c, src/main.c, src/util.c: fix tooltip option in dnd
	  dialog

2016-12-26 04:45  v1c0nt

	* po/POTFILES.in, po/ru.po, po/uk.po: fix translation

2016-12-11 14:04  v1c0nt

	* ChangeLog: release 0.38.0

2016-12-11 09:38  v1c0nt

	* ChangeLog, NEWS, configure.ac, src/list.c: prepare to release

2016-12-11 08:52  v1c0nt

	* configure.ac: bump version

2016-12-11 08:52  v1c0nt

	* data/yad.1, po/ru.po, po/uk.po, src/list.c, src/option.c,
	  src/yad.h: add --add-action option to list dialog

2016-12-11 08:34  v1c0nt

	* src/list.c: refactoring list dialog code

2016-12-03 19:51  v1c0nt

	* src/main.c: add custom css provider

2016-12-03 14:55  v1c0nt

	* data/yad.1, po/ru.po, po/uk.po, src/option.c, src/scale.c,
	  src/yad.h: add --inc-buttons option to scale dialog

2016-12-03 13:46  v1c0nt

	* data/yad.1, po/ru.po, po/uk.po, src/main.c, src/option.c,
	  src/text.c, src/yad.h: add ctrl+enter behavior for all kind of
	  dialogs

2016-12-03 08:58  v1c0nt

	* README, README.md: update README

2016-12-03 08:56  v1c0nt

	* Makefile.am, README, README.md: update README

2016-12-03 08:52  v1c0nt

	* README: update README

2016-12-03 08:46  v1c0nt

	* data/yad.1, po/ru.po, po/uk.po, src/calendar.c, src/option.c,
	  src/yad.h: backport --show-weeks option to calendar dialog
